k8s/network/network-policies/ingress/netpol-1.yaml
# 
# Netpol 1 - Permite que um pod A seja acessado apenas por um PodB que está em outro nó
#
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netpol1
  namespace: lab
spec:
  podSelector:
    matchLabels:
      app: nginx-1-lab
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: nginx-2-lab
      ports:
        - protocol: TCP
          port: 80
